les 56, splitted to multimodule system, added maven release plugin

--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,22 @@
 #release configuration
-#Sun Jan 26 18:22:02 EET 2020
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-pushChanges=true
-scm.url=scm\:git\:https\://github.com/Goncharoff/sfg-pet-clinic.gitm
-preparationGoals=clean verify
-projectVersionPolicyId=default
-remoteTagging=true
+#Sun Jan 26 18:23:23 EET 2020
+project.scm.com.goncharoff\:pet-clinic-web.empty=true
 scm.commentPrefix=[maven-release-plugin] 
+project.dev.com.goncharoff\:sfg-pet-clinik=0.0.2-SNAPSHOT
+pushChanges=true
+project.scm.com.goncharoff\:sfg-pet-clinik.developerConnection=scm\:git\:https\://github.com/Goncharoff/sfg-pet-clinic.gitm
+project.scm.com.goncharoff\:pet-clinic-data.empty=true
+scm.tag=sfg-pet-clinik-0.0.1
+remoteTagging=true
+projectVersionPolicyId=default
+project.dev.com.goncharoff\:pet-clinic-web=0.0.2-SNAPSHOT
+scm.url=scm\:git\:https\://github.com/Goncharoff/sfg-pet-clinic.gitm
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+preparationGoals=clean verify
 exec.snapshotReleasePluginAllowed=false
-completedPhase=check-poms
+project.rel.com.goncharoff\:pet-clinic-web=0.0.1
+project.scm.com.goncharoff\:sfg-pet-clinik.tag=HEAD
+project.dev.com.goncharoff\:pet-clinic-data=0.0.2-SNAPSHOT
+project.rel.com.goncharoff\:sfg-pet-clinik=0.0.1
+project.rel.com.goncharoff\:pet-clinic-data=0.0.1
+completedPhase=generate-release-poms
