--- a/pom.xml
+++ b/pom.xml
@@ -1,30 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
+
+    <groupId>com.goncharoff</groupId>
+    <artifactId>sfg-pet-clinik</artifactId>
+    <version>0.0.1</version>
 
     <modules>
         <module>pet-clinic-data</module>
         <module>pet-clinic-web</module>
     </modules>
 
+    <name>sfg-pet-clinic</name>
+    <description>SFG Pet Clinic Project</description>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.2.4.RELEASE</version>
-        <relativePath /> <!-- lookup parent from repository -->
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>com.goncharoff</groupId>
-    <artifactId>sfg-pet-clinik</artifactId>
-    <version>0.0.1</version>
-    <name>sfg-pet-clinic</name>
-    <description>SFG Pet Clinic Project</description>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>11</java.version>
+        <jaxb.version>2.3.0</jaxb.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
-
 
 
     <build>
@@ -37,9 +44,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
-                    <goal>
-                        install
-                    </goal>
+                    <goal>install</goal>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
             </plugin>
         </plugins>
@@ -47,6 +53,6 @@
 
     <scm>
         <developerConnection>scm:git:https://github.com/Goncharoff/sfg-pet-clinic.gitm</developerConnection>
-      <tag>sfg-pet-clinik-0.0.1</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 </project>
