--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,10 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
 
-    <groupId>com.goncharoff</groupId>
-    <artifactId>sfg-pet-clinik</artifactId>
-    <version>0.0.1</version>
-
     <modules>
         <module>pet-clinic-data</module>
         <module>pet-clinic-web</module>
     </modules>
-
-    <name>sfg-pet-clinic</name>
-    <description>SFG Pet Clinic Project</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -23,15 +16,16 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
+    <groupId>com.goncharoff</groupId>
+    <artifactId>sfg-pet-clinik</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>sfg-pet-clinic</name>
+    <description>SFG Pet Clinic Project</description>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>11</java.version>
-        <jaxb.version>2.3.0</jaxb.version>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
+
 
 
     <build>
@@ -44,15 +38,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
-                    <goal>install</goal>
-                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <goal>
+                        install
+                    </goal>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
     <scm>
-        <developerConnection>scm:git:https://github.com/Goncharoff/sfg-pet-clinic.git</developerConnection>
-        <tag>HEAD</tag>
+        <developerConnection>scm:git:https://github.com/Goncharoff/sfg-pet-clinic.gitm</developerConnection>
     </scm>
 </project>
