--- a/pom.xml
+++ b/pom.xml
@@ -38,15 +38,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
-                    <goal>
-                        install
-                    </goal>
+                    <goal>install</goal>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
     <scm>
-        <developerConnection>scm:git:https://github.com/Goncharoff/sfg-pet-clinic.gitm</developerConnection>
+        <developerConnection>scm:git:https://github.com/Goncharoff/sfg-pet-clinic.git</developerConnection>
+        <tag>HEAD</tag>
     </scm>
 </project>
