--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,9 @@
     </build>
 
     <scm>
+        <connection>scm:git:https://github.com/Goncharoff/sfg-pet-clinic.git</connection>
         <url>scm:git:https://github.com/Goncharoff/sfg-pet-clinic.git</url>
+        <developerConnection>scm:git:https://github.com/Goncharoff/sfg-pet-clinic.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
 </project>
