--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
     <groupId>com.goncharoff</groupId>
     <artifactId>sfg-pet-clinik</artifactId>
-    <version>0.0.6</version>
+    <version>0.0.7-SNAPSHOT</version>
     <name>sfg-pet-clinic</name>
     <description>SFG Pet Clinic Project</description>
 
@@ -46,7 +46,7 @@
         <connection>scm:git:https://github.com/Goncharoff/sfg-pet-clinic.git</connection>
         <url>scm:git:https://github.com/Goncharoff/sfg-pet-clinic.git</url>
         <developerConnection>scm:git:https://github.com/Goncharoff/sfg-pet-clinic.git</developerConnection>
-        <tag>sfg-pet-clinik-0.0.6</tag>
+        <tag>HEAD</tag>
     </scm>
 
 </project>
