changes for pom deployment plugin

--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
         <repository>
             <id>sfg-pet-clinic</id>
             <name>sfg-pet-clinic</name>
-            <url>scm:git:https://github.com/Goncharoff/sfg-pet-clinic.git</url>
+            <url>https://github.com/Goncharoff/sfg-pet-clinic.git</url>
             <layout>default</layout>
         </repository>
     </distributionManagement>
