--- a/pom.xml
+++ b/pom.xml
@@ -43,17 +43,8 @@
     </build>
 
     <scm>
-        <url>scm:git:https://github.com/Goncharoff/sfg-pet-clinic.git</url>
-        <developerConnection>scm:git:https://github.com/Goncharoff/sfg-pet-clinic.git</developerConnection>
+        <developerConnection>cm:git:git@github.com:Goncharoff/sfg-pet-clinic.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
-    <distributionManagement>
-        <repository>
-            <id>sfg-pet-clinic</id>
-            <name>sfg-pet-clinic</name>
-            <url>https://github.com/Goncharoff/sfg-pet-clinic.git</url>
-            <layout>default</layout>
-        </repository>
-    </distributionManagement>
 </project>
