changes for pom deployment plugin

--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,22 @@
 #release configuration
-#Sun Jan 26 19:53:09 EET 2020
+#Sun Jan 26 19:53:34 EET 2020
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
+project.dev.com.goncharoff\:pet-clinic-data=0.0.11-SNAPSHOT
 remoteTagging=true
+project.scm.com.goncharoff\:sfg-pet-clinik.tag=HEAD
+project.scm.com.goncharoff\:pet-clinic-data.empty=true
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=true
-completedPhase=check-poms
+project.rel.com.goncharoff\:sfg-pet-clinik=0.0.10
+project.scm.com.goncharoff\:pet-clinic-web.empty=true
+completedPhase=run-preparation-goals
+project.dev.com.goncharoff\:pet-clinic-web=0.0.11-SNAPSHOT
 scm.url=scm\:git\:git@github.com\:Goncharoff/sfg-pet-clinic.git
+project.dev.com.goncharoff\:sfg-pet-clinik=0.0.11-SNAPSHOT
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+pushChanges=true
+project.rel.com.goncharoff\:pet-clinic-web=0.0.10
+scm.tag=sfg-pet-clinik-0.0.10
+project.scm.com.goncharoff\:sfg-pet-clinik.developerConnection=scm\:git\:git@github.com\:Goncharoff/sfg-pet-clinic.git
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
+project.rel.com.goncharoff\:pet-clinic-data=0.0.10
