--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
     <groupId>com.goncharoff</groupId>
     <artifactId>sfg-pet-clinik</artifactId>
-    <version>0.0.14</version>
+    <version>0.0.15-SNAPSHOT</version>
     <name>sfg-pet-clinic</name>
     <description>SFG Pet Clinic Project</description>
 
@@ -44,7 +44,7 @@
 
     <scm>
         <developerConnection>scm:git:git@github.com:Goncharoff/sfg-pet-clinic.git</developerConnection>
-        <tag>sfg-pet-clinik-0.0.14</tag>
+        <tag>sfg-pet-clinik-0.0.11</tag>
     </scm>
 
     <distributionManagement>
