--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -77,6 +77,13 @@
         </dependency>
         <!-- end of webjars -->
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>2.20.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
